Changed social end point in social for handling share discussion URL, returning only success status on subscrption/unsubscribing on mobile, and minor discussion issues. #641 #726 #735 #728

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -2479,6 +2479,7 @@ div.graph-header-container .red-header {
 .sprint .right-content {
 	width: calc(100% - 140px);
 	float: right;
+	padding-right: 10px;
 }
 
 .sprint .right-content .participants-wrapper {
@@ -4821,6 +4822,11 @@ input.cropit-image-zoom-input {
 /* Limit the background image by adding overflow: hidden */
 #image-cropper {
 	overflow: hidden;
+	padding-top: 60px;
+}
+
+.choose-image-button {
+	margin-bottom: 10px;
 }
 
 .cropit-image-background {
@@ -4832,6 +4838,10 @@ input.cropit-image-zoom-input {
 	position: relative;
 	z-index: 10;
 	display: block;
+}
+
+#cropit-image-input {
+	display: none;
 }
 
 .cropit-image-input {
